# VoiceFlow

./: .gitignore  CLAUDE.md  PASTE_DUPLICATE_ANALYSIS.md  README.md  README_EN.md  VOICE_INPUT_DEV_PLAN.md  asr_client.py  audio_recorder.py  config.yaml  hotkey_manager.py  main.py  notifier.py  pyproject.toml  state_machine.py  text_injector.py  utils.py  voice_indicator.py  window_detector.py
docs/: VOICE_INPUT_PROJECT_DOC.md
scripts/: check_audio.sh  run.sh  voiceflow.service
tests/: test_asr_client_mock.py  test_state_machine.py  test_utils.py
voice_input.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
voiceflow-ui/: index.html  package.json  pnpm-lock.yaml
voiceflow-ui/src/: App.tsx
voiceflow-ui/src-tauri/: Cargo.toml  tauri.conf.json
voiceflow-ui/src-tauri/icons/: icon.icns
voiceflow-ui/src-tauri/src/: lib.rs  paste.rs  window_pos.rs
voiceflow-ui/src/components/: VoiceOverlay.tsx
voiceflow_py/: daemon.py  test_window_pos.py
