[package]
name = "voiceflow"
version = "0.1.0"
description = "VoiceFlow - Local voice input assistant"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["tray-icon", "unstable"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
